# umi_trim

./: Cargo.toml
src/: lib.rs  main.rs
tests/: bad.fastq
umi_trim/: README.md
umi_trim/src/: lib.rs  main.rs
umi_trim/tests/: test.fastq  umi.fastq
