[package]
name = "umi_trim"
version = "0.1.0"
authors = ["Aurélien Ginolhac <ginolhac@gmail.com>"]
description = "Move Unique Molecular Identifier from seq to name and trim a linker motif (TATA)"
keywords = ["fastq", "bio", "UMI"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "1.3.1"
clap = {version = "4.3.19", features = ["derive"]}

